--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Katerina's website</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,16 +13,16 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <img class="top-cloud" src="cloud.png" alt="cloud-img">
     <h1>I'm Katerina</h1>
     <h2>a programmer</h2>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-    <img src="images/mountain.png" alt="mountain-img">
+    <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
+    <img src="mountain.png" alt="mountain-img">
   </div>
   <div class="middle-container">
 
     <div class="profile">
-      <img src="images\katia_picture.png" width="200" height="200" alt="katia profile picture">
+      <img src="katia_picture.png" width="200" height="200" alt="katia profile picture">
       <h2>Hello.</h2>
       <p class="intro">I have a degree in natural sciences and programming experience in Python, PHP, HTML, Javascript, CSS, Bootstrap and SQL.</p>
     </div>
@@ -31,7 +31,7 @@
 
 
       <div class="skill-row">
-        <img class="skill-img" src="images\computer.png" width="200" height="200" alt="computer picture">
+        <img class="skill-img" src="computer.png" width="200" height="200" alt="computer picture">
         <h2>My certificates</h2>
         <ul>
           <li>Harvard CS50's Introduction to Computer Science</li>
@@ -40,7 +40,7 @@
       </div>
       <hr>
       <div class="skill-row">
-        <img class="img-chillies" src="images\chillies.png" width="200" height="200" alt="chillies">
+        <img class="img-chillies" src="chillies.png" width="200" height="200" alt="chillies">
         <h2><strong>My skills</strong></h2>
         <table class="skill-table" cellspacing="10">
           <thead></thead>
